--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --env-file=.env server.js",
+    "start": "node server.js",
+    "dev": "nodemon --env-file=.env server.js",
     "debug": "ndb --env-file=.env server.js"
   },
   "author": "Sahil Rana",
